# secops_antigravity

./: AGENTS.md  Dockerfile  Executive_KPIs_calculation.md  README.md  Secops_genai_demo.xlsx  build_json.py  deep_demo_alignment_audit.md  demo_inputs.json  demo_validation_audit.md  excel_output.json  kpi_calc.md  parse_excel.py  pyproject.toml  requirements.txt  sample_workflow.py  shared_old.py  shared_old_utf8.py
.streamlit/: config.toml
app/: main.py
app/agents/: __init__.py  manager.py  rag_engine.py
app/data/: compliance_frameworks.yaml  demo_requirements.json
app/data_generator/: __init__.py  generator.py  rag_generator.py
app/guardrails/: __init__.py  validator.py
app/kpi_engine/: __init__.py  calculator.py
app/utils/: __init__.py  charts.py  workflow_utils.py
app/views/: agent_console.py  asset_visibility.py  automation.py  chatbot.py  compliance.py  dashboard.py  data_explorer.py  detection_response.py  login.py  major_incident.py  provisioning.py  secops.py  shared.py
